Thu Nov  1 11:11:15 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Service_Config.h:
          Removed the patch for bugzilla 2980, this results in a memory
          leak of 10Kb for each thread that uses the ACE_Service_Config_Guard.
          This memory leak is documented in bugzilla 3108. For bugzilla 2980
          we need to have a different patch without reintroducing the
          memory leak.

        * ace/Service_Config.cpp:
        * ace/Service_Config.h:
        * ace/Service_Config.inl:
        * ace/Service_Gestalt.cpp:
        * ace/Service_Gestalt.h:
          Bool changes

Thu Nov  1 10:23:15 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Malloc_Test.cpp:
          Initialise some pointers with 0 to fix gcc 4.2 warnings. Thanks
          to Robert Iakobashvili <coroberti at gmail dot com> for reporting
          this

Thu Nov  1 09:27:15 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Process.h:
        * tests/Reactor_Impl.h:
        * tests/Select_Reactor_T.h:
        * tests/SOCK.h:
        * tests/SOCK_Acceptor.h:
        * tests/SOCK_SEQPACK_Acceptor.h:
        * tests/TkReactor/TkReactor.h:
        * tests/Token.h:
        * tests/WFMO_Reactor.h:
        * tests/WIN32_Asynch_IO.h:
        * tests/WIN32_Proactor.h:
        * tests/XtReactor/XtReactor.h:
          Doxygen improvements

        * tests/TSS_T.cpp:
        * tests/TSS_T.h:
          Initialise pointers with 0 and changed once_ to a bool

Thu Nov  1 04:36:27 UTC 2007  J.T. Conklin  <jtc@acorntoolworks.com>

        * bin/PerlACE/Run_Test.pm:

          Change wait_interval_for_process_creation from 10 to 12 seconds
          on NetBSD systems.  Many TAO unit tests take at least 5 seconds
          to initialize on NetBSD/i386 systems as they calibrate the high
          resolution timer.  Often this doesn't leave enough time to
          complete initialization within the timeout.
