@@ -1,3 +1,13 @@
+Thu Nov  1 11:59:15 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * ace/Select_Reactor_T.h:
+        * ace/Timer_Queue_T.h:
+        * ace/Timer_Wheel_T.h:
+          Doxygen changes
+
+        * ace/Timer_Queue_T.cpp:
+          Layout change
+
 Thu Nov  1 11:11:15 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * ace/Service_Config.h:
